fix leave jump

--- a/assets/css/pages/_transitions.scss
+++ b/assets/css/pages/_transitions.scss
@@ -1,11 +1,22 @@
 // Transitions
-.fade-enter-active,
-.fade-leave-active {
+.fade-enter-active {
   transition: opacity 0.3s;
 }
 
-.fade-enter,
+.fade-enter {
+  opacity: 0;
+}
+
+// Hides jump
+.fade-leave {
+  opacity: 0;
+}
+
 .fade-leave-active {
+  opacity: 0;
+}
+
+.fade-leave-to {
   opacity: 0;
 }
 
